--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
-    "name": "",
-    "short_name": "",
-    "description": "",
-    "start_url": "",
-    "display": "",
-    "background_color": "",
-    "theme_color": "",
+    "name": "Lab8-Starter",
+    "short_name": "Dev",
+    "description": "Making a progressive webapps",
+    "start_url": "/",
+    "display": "standalone",
+    "background_color": "red",
+    "theme_color": "cyan",
     "icons": [
       {
-        "src": "/assets/images/icons/icon-192x192.png",
+        "src": "./assets/images/icons/icon-192x192.png",
         "sizes": "192x192",
         "type": "image/png"
       }
