Added my name to manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Lab8-Starter",
-    "short_name": "Dev",
+    "short_name": "Dev, Andy",
     "description": "Making a progressive webapps",
     "start_url": "/",
     "display": "standalone",
