changed the name for the ss

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Lab8-Starter",
+    "name": "devPach4545/Lab8-Starter",
     "short_name": "DevAndy",
     "description": "Making a progressive webapps",
     "start_url": "/",
